--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "pmdevelopment/google-authenticator-bundle",
     "description": "Google Authenticator for Symfony2",
     "require": {
-        "endroid/qrcode-bundle": "dev-master"
+        "endroid/qrcode": "^2.2.3",
+        "php": ">=5.3.2"
     },
     "license": "BSD",
     "authors": [
@@ -18,11 +19,10 @@
             "role": "Developer"
         }
     ],
-    "require": {
-        "php": ">=5.3.2"
-    },
     "autoload": {
-        "psr-0": { "PM\\Bundle\\GoogleAuthenticatorBundle": "" }
+        "psr-0": {
+            "PM\\Bundle\\GoogleAuthenticatorBundle": ""
+        }
     },
     "target-dir": "PM/Bundle/GoogleAuthenticatorBundle"
 }
